--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_lorem: ^2.0.0
   flutter_svg: ^1.0.3
   smooth_star_rating_null_safety: ^1.0.4+2
 
